Fix text, and back to top readability

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,5 +1,6 @@
 // Colors
 $lb-red: #a51d21;
+$lb-red-opaque: rgba(78, 14, 16, 0.5);
 
 // Sizes
 $xs-size: 1rem;
