--- a/src/styles/components/_back-to-top-button.scss
+++ b/src/styles/components/_back-to-top-button.scss
@@ -26,4 +26,7 @@
 	display: inline;
 	margin-left: $s-size;
 	display: none;
+
+	letter-spacing: 2px;
+	text-transform: uppercase;
 }
