--- a/src/styles/components/_section-header.scss
+++ b/src/styles/components/_section-header.scss
@@ -3,6 +3,6 @@
 	font-family: $font-family-edgy2;
 	text-align: center;
 	font-size: $l-size;
-	text-shadow: 4px 3px 0px darken($lb-red, 20%);
+	text-shadow: 4px 3px 0px darken($lb-red-opaque, 20%);
 	letter-spacing: 5px;
 }
